# tupp

./: .gitignore  Cargo.toml  README.md  contacts.schema.json  setup.sh  test.json  tupp.schema.json  tuppdate.sh
src/: cli.rs  contact.rs  error.rs  family.rs  group.rs  main.rs  models.rs  sanitize.rs  storage.rs  unwrap.rs  validation.rs
src/commands/: contact.rs  general.rs  group.rs  mod.rs  serve.rs
src/interactions/: address.rs  birth.rs  create.rs  date.rs  death.rs  email.rs  gender.rs  mod.rs  phone.rs  social.rs
