[package]
name = "tupp"
version = "0.0.1"
authors = ["paradoxe.tech","floriandrd"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
num = "0.4"
dialoguer = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5.0"