[package]
name = "tupp"
version = "1.2.0"
authors = ["mtripnaux","gaiadrd"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
num = "0.4"
dialoguer = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5.0"